# afvalalfabet

./: .gitignore  .travis.yml  Makefile  README.md  afvalalfabet.cabal  afvalwoordenboek.cabal  data.csv  dictionary.cls  dictionary.sty  fixmarks.sty  make.sh  sources.md  stack.yaml  tips.csv
.github/ISSUE_TEMPLATE/: nieuw-item.md  verkeerd-item.md
.github/workflows/: build-ci.yml
data/: README.md  data.csv  forbidden.csv  intercomunales.csv  ivbo_data.csv  mirom_data.csv  not.csv  qa.csv  rules.csv  sources.csv  synonyms.csv  tips.csv  where.csv
hooks/: README.md  pre-commit
sources/: extra.csv
src/: Main.hs
