name:                afvalwoordenboek
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/HaPyTeX/afvalwoordenboek#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            utils
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable afvalwoordenboek
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , bytestring >=0.10
    , cassava >=0.5
    , containers >=0.6
    , HaTeX >=3.20
    , text >=1.0
    , vector >=0.12
